[package]
name = "intermediate-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-common = { path = "../proxy-common" }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
