[package]
name = "proxy-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
