[package]
name = "simple-ipv6-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-common = { path = "../proxy-common" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
rand = "0.8"
libc = "0.2"
