[package]
name = "tor-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-common = { path = "../proxy-common" }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
http-body-util = { workspace = true }
webpki-roots = { workspace = true }
